Fixed some responsive styling for active links and page spacing.

--- a/client/src/assets/styles/NavBar.css
+++ b/client/src/assets/styles/NavBar.css
@@ -11,11 +11,6 @@
   background-color: var(--blue) !important;
 }
 
-.active {
-  border: 4px solid var(--blue);
-  background-color: var(--blue);
-}
-
 .notActive {
   border: 0px solid var(--blue) !important;
   background-color: none !important;
@@ -49,6 +44,13 @@
 .navbar-light .navbar-toggler {
   color: var(--darkBlue) !important;
   border-color: var(--darkBlue) !important;
+}
+
+@media only screen and (min-width: 768px) {
+  .navLinks.active {
+    border: 4px solid var(--blue);
+    background-color: var(--blue);
+  }
 }
 
 @media only screen and (max-width: 767px) and (min-width: 320px) {
