--- a/client/src/assets/styles/Sidebar.css
+++ b/client/src/assets/styles/Sidebar.css
@@ -1,9 +1,3 @@
-#sidebar {
-  display: flex !important;
-  flex-direction: row !important;
-  padding: 10px 0;
-}
-
 #sidebarWrapper {
   position: sticky !important;
   top: 66px !important;
@@ -13,27 +7,42 @@
   margin-bottom: 10px;
 }
 
+#sidebar {
+  display: flex !important;
+  flex-direction: row !important;
+  padding: 10px 0;
+  height: 100% !important;
+  flex-wrap: nowrap;
+}
+
+.sidebarNav {
+  height: 50px;
+  width: 50px;
+  padding: 0 auto !important;
+}
+
+.sideNavLink {
+  width: 100% !important;
+  height: 100% !important;
+  padding: 0 !important;
+}
+
+.sidebarActive {
+  border: 1px solid var(--darkBlue);
+}
+
+.sidebarIcons {
+  width: 43px !important;
+  height: 43px !important;
+  margin: 2.5px !important;
+}
+
 .sidebarLinks {
   display: none !important;
 }
 
-.sidebarNav {
-  height: 10%;
-  width: 10%;
-  margin: 5px;
-  padding: 0 auto !important;
-}
-
 #hr {
   margin: 0 !important;
-}
-
-@media only screen and (max-width: 768px) and (min-width: 481px) {
-  .sidebarLinks {
-    text-decoration: none;
-    padding: 0px !important;
-    font-size: 0.5em;
-  }
 }
 
 @media only screen and (min-width: 768px) {
@@ -42,37 +51,45 @@
   }
 }
 
-@media only screen and (min-width: 769px) {
-  .sidebarNav {
-    height: 5%;
-    width: 5%;
-    margin: 5px;
-    padding: 0 auto !important;
+@media only screen and (max-width: 1024px) {
+  .sidebarWrapper {
+    height: 70px !important;
   }
 }
 
-@media only screen and (min-width: 1025px) {
+@media only screen and (min-width: 1025px) and (min-height: 850px) {
   #sidebar {
     flex-direction: column !important;
     width: 100%;
     padding: 0 !important;
-    align-content: center !important;
-    /* justify-items: center !important; */
+    text-align: center !important;
   }
 
   #sidebarWrapper {
     display: flex !important;
     width: 125px !important;
     margin-right: 12px;
-    height: calc(100vh - 203px) !important;
-    padding-top: 12px;
+    height: calc(100vh - 191px) !important;
+    margin-bottom: 0px !important;
+    /* background-color: lightgreen; */
+    justify-items: flex-end !important;
+  }
+
+  .sidebarIcons {
+    width: 65px !important;
+    height: 65px !important;
   }
 
   .sidebarNav {
-    width: 50%;
-    /* margin: auto; */
+    width: 100px;
+    height: 100px;
+    margin: auto;
+    /* border: 1px solid var(--darkBlue); */
+  }
+
+  .sideNavLink {
     display: flex !important;
-    justify-content: center;
+    flex-direction: column !important;
   }
 
   .sidebarLinks {
